[package]
name = "hey_chat_gpt"
version = "1.1.1"
edition = "2021"
rust-version = "1.85.0"
authors = ["namnium <anotherhollow1125@gmail.com>"]
description = "A proc-macro to delegate implementation to the ChatGPT API. ChatGPT APIに実装を代行してもらうマクロです。"
repository = "https://github.com/anotherhollow1125/hey_chat_gpt"
license = "MIT"
keywords = ["LLM", "GPT", "ChatGPT", "OpenAI", "proc-macro"]
categories = ["development-tools"]
exclude = ["src/main.rs"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.95"
proc-macro2 = "1.0.92"
quote = "1.0.38"
reqwest = { version = "0.12.11", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
syn = { version = "2.0.93", features = ["extra-traits", "full"] }
